# viper-validation

./: .flake8  .gitignore  Makefile  README.md  example-schema.yaml  example.ipynb  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
src/vipv/: base.py  cli.py  logging_utils.py  runners.py
