[tool.poetry]
name = "vipv"
version = "0.1.0"
description = "Run Mom-test-style validations on LLM personas"
authors = ["Kaloyan Aleksiev <me@kallyaleksiev.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.34.2"
click = "^8.1.7"
pydantic = "^2.9.0"
types-pyyaml = "^6.0.12.20240808"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"
flake8-bugbear = "^24.8.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vipv = "vipv.cli:main"

[tool.isort]
profile = "black"